07-Blue-Green/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: my-app-service
  labels: 
    name: my-app-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector: 
    name: my-app
    version: "1.11"
  type: LoadBalancer
