07-Blue-Green/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: now-what.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-app
          servicePort: 8080
